修改中文页面手机端不显示主菜单的问题

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -165,8 +165,6 @@ function filterTable(radio) {
                             <ul>
                                 <li>
                                     <a href="index.html" class="active">主页</a>
-
-
                                 </li>
                                 <li>
                                     <a href="jobs.html">产品列表</a>
@@ -199,6 +197,16 @@ function filterTable(radio) {
                             </ul>
                 
                             <!-- <a href="appointment.html" class="lab-btn">预约</a> -->
+                        </div>
+                        <div class="header__bararea">
+                            <div class="header__bar d-xl-none">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="header__ellepsis d-xl-none">
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
                         </div>
                         
                     </div>
