--- a/public/service.html
+++ b/public/service.html
@@ -139,7 +139,16 @@
                 
                             <!-- <a href="appointment.html" class="lab-btn">预约</a> -->
                         </div>
-                        
+                        <div class="header__bararea">
+                            <div class="header__bar d-xl-none">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="header__ellepsis d-xl-none">
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- <div class="search-area">
