修改404页面的链接为线上链接

--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="header__toparea">
                     <div class="logo">
-                        <a href="index.html"><img src="assets/images/header/logo/logo2.png" alt="logo" /></a>
+                        <a href="https://chocolatemn.github.io/ljs/public"><img src="assets/images/header/logo/logo2.png" alt="logo" /></a>
                     </div>
                     <div class="info">
                         <ul>
@@ -79,15 +79,15 @@
                                     <a href="404-en.html" class="right-align">English</a>
                                 </div>
                             </li>
-                            <!-- <li><a href="index.html">中文</a> -->
+                            <!-- <li><a href="https://chocolatemn.github.io/ljs/public">中文</a> -->
                                 <!-- <div class="text">
-                                    <p><a href="index.html">英文</a></p>
+                                    <p><a href="https://chocolatemn.github.io/ljs/public/index-en.html">英文</a></p>
                                 </div> -->
                             <!-- </li> -->
                             <!-- <li><a href="index-en.html">English</a> -->
                                 <!-- <div class="text">
                                     <span></span>
-                                    <p><a href="index.html">English</a></p>
+                                    <p><a href="https://chocolatemn.github.io/ljs/public">English</a></p>
                                 </div> -->
                             <!-- </li> -->
                         </ul>
@@ -102,7 +102,7 @@
                         <div class="menu">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="active">主页</a>
+                                    <a href="https://chocolatemn.github.io/ljs/public" class="active">主页</a>
 
 
                                 </li>
@@ -171,7 +171,7 @@
                 <h2>404 错误 页面</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">主页</a></li>
+                        <li class="breadcrumb-item"><a href="https://chocolatemn.github.io/ljs/public">主页</a></li>
                         <li class="breadcrumb-item active" aria-current="page">404</li>
                     </ol>
                 </nav>
@@ -194,7 +194,7 @@
                         <div class="fourzero__content text-center">
                             <h2>哎呀！找不到此页面</h2>
                             <p>很抱歉，我们似乎找不到您要求的页面。这可能是因为您键入的网址不正确。</p>
-                            <a href="index.html" class="lab-btn">去主页</a>
+                            <a href="https://chocolatemn.github.io/ljs/public" class="lab-btn">去主页</a>
                         </div>
                     </div>
                 </div>
@@ -348,7 +348,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <div class="footer__copytext text-center">
-                    <p>&copy; 截至 2024 <a href="index.html">莱金丝</a>. 保留所有权利.</p>
+                    <p>&copy; 截至 2024 <a href="https://chocolatemn.github.io/ljs/public">莱金丝</a>. 保留所有权利.</p>
                 </div>
             </div>
         </div>
