404页面重新置为原来的位置

--- a/public/jobs-en.html
+++ b/public/jobs-en.html
@@ -246,8 +246,8 @@ function filterTable(radio) {
                         <!-- <input type="text" placeholder="keywords">
                         <input type="text" placeholder="location">
                         <input type="submit" value="search jobs" class="lab-btn"> -->
-                        <input type="text" id="search" onkeyup="searchTable()" placeholder="keywords...">
-                        <input type="text" id="search-diqu" onkeyup="searchTable2()" placeholder="area...">
+                        <input type="text" id="search" onkeyup="searchTable()" placeholder="keywords..." required>
+                        <input type="text" id="search-diqu" onkeyup="searchTable2()" placeholder="area..." required>
 
                         <input type="submit" value="search" class="lab-btn">
                     </form>
