--- a/public/jobs.html
+++ b/public/jobs.html
@@ -254,8 +254,8 @@ function filterTable(radio) {
                         <input type="text" placeholder="地区">
                         <input type="submit" value="搜索" class="lab-btn"> -->
                         <!-- <input type="text" id="searchInput" placeholder="搜索本页面..." onkeyup="searchPage()"> -->
-                        <input type="text" id="search" onkeyup="searchTable()" placeholder="关键词...">
-                        <input type="text" id="search-diqu" onkeyup="searchTable2()" placeholder="地区...">
+                        <input type="text" id="search" onkeyup="searchTable()" placeholder="关键词..." required>
+                        <input type="text" id="search-diqu" onkeyup="searchTable2()" placeholder="地区..." required>
                         <input type="submit" value="搜索" class="lab-btn">
                     </form>
                 </div>
