更改预约的action为/,待后台搭建之后再修改为后台地址

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -331,7 +331,7 @@
                             </li>
                         </ul>
                         <div class="about__footer">
-                            <a href="appointment.html" class="lab-btn">Book a consultation</a>
+                            <a href="appointment-en.html" class="lab-btn">Book a consultation</a>
                             <div class="about__author">
                                 <div class="thumb">
                                     <img src="assets/images/about/author/01.jpg" alt="about author" />
