--- a/public/appointment-en.html
+++ b/public/appointment-en.html
@@ -309,7 +309,9 @@ return true;
                 <div class="col-xl-6 col-lg-9 col-12 offset-lg-3 offset-xl-6">
                     <div class="callAaction__form">
                         <h2>Quick Online Consultancy</h2>
-                        <form action="http://localhost:3000/submit-message" method="post" id="guestbook-form" onsubmit="return validateEmail()">
+                        <!-- <form action="http://localhost:3000/submit-message" method="post" id="guestbook-form" onsubmit="return validateEmail()"> -->
+                            <form action="/" method="post" id="guestbook-form" onsubmit="return validateEmail()">
+
                             <input type="text" placeholder="your name" name="name" id="name" required>
                             <input type="text" placeholder="Email Address" name="email" id="email" required>
                             <div class="custom-select">
