--- a/public/appointment.html
+++ b/public/appointment.html
@@ -327,7 +327,9 @@ function validateEmail() {
                 <div class="col-xl-6 col-lg-9 col-12 offset-lg-3 offset-xl-6">
                     <div class="callAaction__form">
                         <h2>快速在线咨询</h2>
-                        <form action="http://localhost:3000/submit-message" method="post" id="guestbook-form" onsubmit="return validateEmail()">
+                        <!-- <form action="http://localhost:3000/submit-message" method="post" id="guestbook-form" onsubmit="return validateEmail()"> -->
+                            <form action="/" method="post" id="guestbook-form" onsubmit="return validateEmail()">
+
                             <input type="text" placeholder="您的名字" name="name" id="name" required>
                             <input type="text" placeholder="Email" name="email" id="email" required>
                             <div class="custom-select" >
