重新加回预约-en页面form的编码

--- a/public/appointment-en.html
+++ b/public/appointment-en.html
@@ -311,7 +311,7 @@ return true;
                         <h2>Quick Online Consultancy</h2>
                         <!-- <form action="http://localhost:3000/submit-message" method="post" id="guestbook-form" onsubmit="return validateEmail()"> -->
                         <!-- <form action="/" method="post" id="guestbook-form" onsubmit="return validateEmail()"> -->
-                            <form action="mailto:3640001@qq.com" method="post" id="guestbook-form" onsubmit="return validateEmail()">
+                            <form action="mailto:3640001@qq.com" enctype="text/plain" method="post" id="guestbook-form" onsubmit="return validateEmail()">
 
                             <input type="text" placeholder="your name" name="name" id="name" required>
                             <input type="text" placeholder="Email Address" name="email" id="email" required>
