将滚动logo部分去掉

--- a/public/index.html
+++ b/public/index.html
@@ -707,8 +707,8 @@ function showMore() {
     </div>
     <!-- ==========Team Member Section Ends Here========== -->
 
-    <!-- ==========Sponsor Section Starts Here========== -->
-    <div class="sponsor">
+    <!-- ==========Sponsor Section Starts Here========== 滚动logo-->
+    <!-- <div class="sponsor">
         <div class="container">
             <div class="sponsor__slider overflow-hidden">
                 <div class="swiper-wrapper">
@@ -750,7 +750,7 @@ function showMore() {
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ==========Sponsor Section Ends Here========== -->
         <!-- ==========Testimonial Section Starts Here========== -->
         <!-- <div class="testimonial testimonial__two padding-tb bg-img" style="background-image: url(assets/images/bg/02.jpg);" id="testimonial">
