首页-中文-team部分咨询的超链接修改

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -684,7 +684,7 @@
                     </div>
                 </div>
                 <div class="text-center infotext">
-                    <p>Get the training from organizations best <a href="#">consultant’s</a>.<a href="#Team" onclick="showMore()" >more</a></p>
+                    <p>Get the training from organizations best <a href="appointment-en.html">consultant’s</a>.<a href="#Team" onclick="showMore()" id="myLink">more</a></p>
                 </div>
             </div>
         </div>
