--- a/public/index.html
+++ b/public/index.html
@@ -700,7 +700,7 @@ function showMore() {
                     </div>
                 </div>
                 <div class="text-center infotext">
-                    <p>获得组织<a onclick="showMore()" href="#Team" id="myLink">更多</a>最佳顾问的 <a href="Appointment.html" id="myLink">咨询</a></p>
+                    <p>获得组织<a onclick="showMore()" href="#Team" id="myLink">更多</a>最佳顾问的 <a href="Appointment.html">咨询</a></p>
                 </div>
             </div>
         </div>
