--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@ function showMore() {
 
                                 </li>
                                 <li>
-                                    <a href="jobs.html">产品列表</a>
+                                    <a href="jobs.html">产品</a>
                                 </li>
 
                                 <!-- <li>
