--- a/public/jobs.html
+++ b/public/jobs.html
@@ -167,7 +167,7 @@ function filterTable(radio) {
                                     <a href="index.html" class="active">主页</a>
                                 </li>
                                 <li>
-                                    <a href="jobs.html">产品列表</a>
+                                    <a href="jobs.html">产品</a>
                                 </li>
 
                                 <!-- <li>
