--- a/public/project-single.html
+++ b/public/project-single.html
@@ -107,7 +107,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="jobs.html">产品列表</a>
+                                    <a href="jobs.html">产品</a>
                                 </li>
 
                                 <!-- <li>
