--- a/public/404.html
+++ b/public/404.html
@@ -108,7 +108,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="jobs.html">产品列表</a>
+                                    <a href="jobs.html">产品</a>
                                 </li>
 
                                 <!-- <li>
