--- a/public/index-en.html
+++ b/public/index-en.html
@@ -579,7 +579,7 @@
 
 
     <!-- ==========Team Member Section Starts Here========== -->
-    <div class="teamMember teamMember__two padding-tb" id="Team">
+    <!-- <div class="teamMember teamMember__two padding-tb" id="Team">
         <div class="container">
             <div class="section__header text-center">
                 <h6>our team members</h6>
@@ -684,12 +684,223 @@
                     </div>
                 </div>
                 <div class="text-center infotext">
-                    <p>Get the training from organizations best <a href="appointment-en.html">consultant’s</a>.<a href="#Team" onclick="showMore()" id="myLink">more</a></p>
+                    <p>Get the training from organizations best <a href="appointment-en.html">consultant’s</a>.<a href="javascript:;" onclick="showMore()" id="myLink">more</a></p>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ==========Team Member Section Ends Here========== -->
+
+        <!-- ==========Team Member Section Starts Here========== -->
+        <div class="teamMember teamMember__two padding-tb" id="Team">
+            <div class="container">
+                <div class="section__header text-center">
+                    <h6>our team members</h6>
+                    <h2>Constal experience meet the team employee's</h2>
+                </div>
+                <div class="section__wrapper">
+                    <div class="row g-4 justify-content-center">
+                        <div class="container1"><div class="container2">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/01.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">William Wu</a></h4>
+                                            <span>founder</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/02.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Lydia Ma</a></h4>
+                                            <span>Director of Operations</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/05.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Tiffanny Qiu</a></h4>
+                                            <span>Customer Director</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box" >
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/03.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Xiaodong Zhao</a></h4>
+                                            <span>Administration</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box" >
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/04.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Nancy</a></h4>
+                                            <span>Technical Engineer</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/01.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">William Wu</a></h4>
+                                            <span>founder</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/02.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Lydia Ma</a></h4>
+                                            <span>Director of Operations</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/05.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Tiffanny Qiu</a></h4>
+                                            <span>Customer Director</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box" >
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/03.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Xiaodong Zhao</a></h4>
+                                            <span>Administration</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box" >
+                                <div class="teamMember__item">
+                                    <div class="teamMember__inner">
+                                        <div class="teamMember__thumb">
+                                            <a href="javascript:;"><img src="assets/images/team/04.jpg" alt="teamMember" /></a>
+                                        </div>
+                                        <div class="teamMember__content">
+                                            <h4><a href="javascript:;">Nancy</a></h4>
+                                            <span>Technical Engineer</span>
+                                            <ul>
+                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div></div>
+
+                    </div>
+                    <div class="text-center infotext">
+                        <p>Get the training from organizations best <a href="appointment-en.html">consultant’s</a>.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ==========Team Member Section Ends Here========== -->
 
 
 
