修改主页菜单-主页链接,尝试手机端打开home列表

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -112,7 +112,7 @@
                         <div class="menu">
                             <ul>
                                 <li>
-                                    <a href="index-en.html" class="active">Home</a>
+                                    <a href="javascript:void(0)" class="active">Home</a>
                                     <ul>
                                         <li>
                                             <a href="#Feature">Our approach</a>
