--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@ function showMore() {
     hiddenItems.style.display = 'none'; // 重新隐藏项目
   }
 }
+// javascript:void(0) href 什么都不会发生
     </script>
 </head>
 
@@ -122,7 +123,7 @@ function showMore() {
                         <div class="menu">
                             <ul>
                                 <li>
-                                    <a href="index.html" class="active">主页</a>
+                                    <a href="javascript:void(0)" class="active">主页</a>
                                     <ul>
                                         <li>
                                             <a href="#Feature">我们的方法</a>
