nacyma和team动画暂停

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
     <link rel="stylesheet" href="assets/css/lightcase.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    
+
     <title>莱金丝</title>
+
+    <!-- 引入外部JavaScript文件 -->
+    <script src="assets/js/donghua.js"></script>
 
     <script>
     // document.getElementById('myLink').addEventListener('click', function(event) {
@@ -35,6 +40,9 @@ function showMore() {
   }
 }
 // javascript:void(0) href 什么都不会发生
+
+
+
     </script>
 </head>
 
@@ -1197,103 +1205,6 @@ function showMore() {
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
-                                <div class="teamMember__item">
-                                    <div class="teamMember__inner">
-                                        <div class="teamMember__thumb">
-                                            <a href="javascript:;"><img src="assets/images/team/01.jpg" alt="teamMember" /></a>
-                                        </div>
-                                        <div class="teamMember__content">
-                                            <h4><a href="javascript:;">吴亮</a></h4>
-                                            <span>创始人 介绍介绍介绍</span>
-                                            <ul>
-                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
-                                <div class="teamMember__item">
-                                    <div class="teamMember__inner">
-                                        <div class="teamMember__thumb">
-                                            <a href="javascript:;"><img src="assets/images/team/02.jpg" alt="teamMember" /></a>
-                                        </div>
-                                        <div class="teamMember__content">
-                                            <h4><a href="javascript:;">马凤</a></h4>
-                                            <span>运营总监</span>
-                                            <ul>
-                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box" >
-                                <div class="teamMember__item">
-                                    <div class="teamMember__inner">
-                                        <div class="teamMember__thumb">
-                                            <a href="javascript:;"><img src="assets/images/team/05.jpg" alt="teamMember" /></a>
-                                        </div>
-                                        <div class="teamMember__content">
-                                            <h4><a href="javascript:;">仇志婷</a></h4>
-                                            <span>客户总监</span>
-                                            <ul>
-                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box">
-                                <div class="teamMember__item">
-                                    <div class="teamMember__inner">
-                                        <div class="teamMember__thumb">
-                                            <a href="javascript:;"><img src="assets/images/team/03.jpg" alt="teamMember" /></a>
-                                        </div>
-                                        <div class="teamMember__content">
-                                            <h4><a href="javascript:;">赵小东</a></h4>
-                                            <span>行政</span>
-                                            <ul>
-                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-lg-4 col-md-6 col-12 box"> 
-                                <div class="teamMember__item">
-                                    <div class="teamMember__inner">
-                                        <div class="teamMember__thumb">
-                                            <a href="javascript:;"><img src="assets/images/team/04.jpg" alt="teamMember" /></a>
-                                        </div>
-                                        <div class="teamMember__content">
-                                            <h4><a href="javascript:;">马娜</a></h4>
-                                            <span>技术工程师</span>
-                                            <ul>
-                                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
 
                         </div></div>
 
